Revert "fix: prevent overlay from appearing behind page content"
This reverts commit 2b1939a7ceac25ebbe91a945fac4a7aa76d5ac4f.

--- a/packages/components/src/components/Flyout/styles/flyout.module.scss
+++ b/packages/components/src/components/Flyout/styles/flyout.module.scss
@@ -58,6 +58,7 @@
     height: 100dvh;
     background-color: var(--box-positive-strong-inverse-color);
     opacity: 0.3;
+    z-index: -1;
     pointer-events: none;
 
     @include sm {
